THRIFT-2017 Resource Leak in thrift struct under compiler/cpp/src/parse/t_program.h

Patch: kuldeep gupta