compiler/cpp/src/parse/t_program.h
@@ -73,6 +73,15 @@ class t_program : public t_doc {
     scope_ = new t_scope();
   }
 
+  ~t_program()
+  {
+   if(scope_)
+   {
+     delete scope_; 
+     scope_ = NULL; 
+   }
+  } 
+
   // Path accessor
   const std::string& get_path() const { return path_; }
 
